<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AlbumsDetailActivity"
    android:background="@color/black">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/principal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <include android:id="@+id/toolbar" layout="@layout/toolbar_description" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="28sp"
            tools:text="User Your Illusion I"/>

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="142dp"
            android:layout_height="112dp"
            android:layout_below="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="134dp"
            android:layout_marginBottom="15dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            tools:text="Rock"/>
        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            tools:text="Guns N Roses"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/artistName"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:id="@+id/date"
            tools:text="1992"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="150dp"
        android:layout_below="@id/principal"
        android:layout_marginTop="-2dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="261dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tracks" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comentarios" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/tabContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/tracksContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_tie_track_to_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="60dp"
                    android:background="#D0BCFF"
                    android:drawableLeft="@android:drawable/ic_input_add"
                    android:drawablePadding="3dp"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:paddingEnd="20dp"
                    android:text="@string/tie_track_to_album"
                    android:textColor="@android:color/white" />
                <TextView
                    android:id="@+id/list_tracks_to_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="21sp" />


                <RelativeLayout
                    android:id="@+id/comentariosContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/actionButtonComentarios"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="60dp"
                        android:background="#FF5733"
                        android:drawableLeft="@android:drawable/ic_input_add"
                        android:drawablePadding="3dp"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:paddingEnd="20dp"
                        android:text="Comentarios"
                        android:textColor="@android:color/white"
                        android:visibility="gone" />

                </RelativeLayout>

            </RelativeLayout>

        </FrameLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="375dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="375dp" />
</RelativeLayout>