...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.MusiciansActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <include
        android:id="@+id/include"
        layout="@layout/app_image"
        android:layout_width="412dp"
...
